fix tree css for overflow text (#592)

--- a/src/theme/components/_tree.scss
+++ b/src/theme/components/_tree.scss
@@ -30,13 +30,13 @@
       color: $action-secondary-04;
       font-size: $egeo-font-size-xxxsmall;
       line-height: $egeo-line-height-small;
+      margin-right: 8px;
    }
 
    .sth-tree-node-text {
       color: $neutral-09;
       font-size: $egeo-font-size-xsmall;
       line-height: $egeo-line-height-small;
-      margin-left: 3px;
    }
 
    .sth-tree-node-name.active,
